Mahout Change Log

Release 0.10.0 - unreleased

  MAHOUT-1605: Make VisualizerTest locale independent (Frank Rosner, Anand Avati via smarthi)

  MAHOUT-1652: Java 7 upgrade (smarthi)

  MAHOUT-1635: Getting an exception when I provide classification labels manually for Naive Bayes (apalumbo)

  MAHOUT-1662: Potential Path bug in SequenceFileVaultIterator breaks DisplaySpectralKMeans (Shannon Quinn)

  MAHOUT-1656: Change SNAPSHOT version from 1.0 to 0.10.0 (smarthi)

  MAHOUT-1593: cluster-reuters.sh does not work complaining java.lang.IllegalStateException (smarthi via akm)

  MAHOUT-1661: All Lanczos modules marked as @Deprecated and slated for removal in future releases (Shannon Quinn)

  MAHOUT-1638: H2O bindings fail at drmParallelizeWithRowLabels(...) (Anand Avati via apalumbo)
  
  MAHOUT-1667: Hadoop 1 and 2 profile in POM (sslavic)

  MAHOUT-1564: Naive Bayes Classifier for New Text Documents (apalumbo)

  MAHOUT-1524: Script to auto-generate and view the Mahout website on a local machine (Saleem Ansari via apalumbo)

  MAHOUT-1589: Deprecate mahout.cmd due to lack of support

  MAHOUT-1655: Refactors mr-legacy into mahout-hdfs and mahout-mr, Spark now depends on much reduced mahout-hdfs

  MAHOUT-1522: Handle logging levels via log4j.xml (akm)

  MAHOUT-1602: Euclidean Distance Similarity Math (Leonardo Fernandez Sanchez, smarthi)

  MAHOUT-1619: HighDFWordsPruner overwrites cache files (Burke Webster, smarthi)

  MAHOUT-1516: classify-20newsgroups.sh failed: /tmp/mahout-work-jpan/20news-all does not exists in hdfs. (Jian Pan via apalumbo)

  MAHOUT-1559: Add documentation for and clean up the wikipedia classifier example (apalumbo)

  MAHOUT-1598: extend seq2sparse to handle multiple text blocks of same document (Wolfgang Buchnere via akm)

  MAHOUT-1659: Remove deprecated Lanczos solver from spectral clustering in mr-legacy (Shannon Quinn)

  MAHOUT-1612: NullPointerException happens during JSON output format for clusterdumper (smarthi, Manoj Awasthi)
