@@ -26,8 +26,7 @@ import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import com.google.common.collect.Lists;
-import com.google.common.io.Closeables;
+import java.util.ArrayList;
 import org.apache.mahout.cf.taste.common.TasteException;
 import org.apache.mahout.cf.taste.impl.common.LongPrimitiveIterator;
 import org.apache.mahout.cf.taste.model.DataModel;
@@ -106,7 +105,7 @@ public class MultithreadedBatchItemSimilarities extends BatchItemSimilarities {
       } catch (InterruptedException e) {
         throw new RuntimeException(e);
       }
-      Closeables.close(writer, false);
+      writer.close();
     }
 
     return output.getNumSimilaritiesProcessed();
@@ -167,7 +166,7 @@ public class MultithreadedBatchItemSimilarities extends BatchItemSimilarities {
 
     @Override
     public void run() {
-      while (numActiveWorkers.get() != 0) {
+      while (numActiveWorkers.get() != 0 || !results.isEmpty()) {
         try {
           List<SimilarItems> similarItemsOfABatch = results.poll(10, TimeUnit.MILLISECONDS);
           if (similarItemsOfABatch != null) {
@@ -206,7 +205,7 @@ public class MultithreadedBatchItemSimilarities extends BatchItemSimilarities {
         try {
           long[] itemIDBatch = itemIDBatches.take();
 
-          List<SimilarItems> similarItemsOfBatch = Lists.newArrayListWithCapacity(itemIDBatch.length);
+          List<SimilarItems> similarItemsOfBatch = new ArrayList<>(itemIDBatch.length);
           for (long itemID : itemIDBatch) {
             List<RecommendedItem> similarItems = getRecommender().mostSimilarItems(itemID, getSimilarItemsPerItem());
 
