@@ -5,9 +5,9 @@
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p/>
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * <p/>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -30,9 +30,9 @@ import org.apache.mahout.cf.taste.similarity.precompute.BatchItemSimilarities;
 import org.apache.mahout.cf.taste.similarity.precompute.SimilarItemsWriter;
 import org.junit.Test;
 
-import java.io.IOException;
 import java.util.Arrays;
 
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
 import static org.mockito.Mockito.mock;
 
@@ -41,7 +41,7 @@ public class MultithreadedBatchItemSimilaritiesTest {
   @Test
   public void lessItemsThanBatchSize() throws Exception {
 
-    FastByIDMap<PreferenceArray> userData = new FastByIDMap<PreferenceArray>();
+    FastByIDMap<PreferenceArray> userData = new FastByIDMap<>();
     userData.put(1, new GenericUserPreferenceArray(Arrays.asList(new GenericPreference(1, 1, 1),
         new GenericPreference(1, 2, 1), new GenericPreference(1, 3, 1))));
     userData.put(2, new GenericUserPreferenceArray(Arrays.asList(new GenericPreference(2, 1, 1),
@@ -59,7 +59,7 @@ public class MultithreadedBatchItemSimilaritiesTest {
   @Test
   public void higherDegreeOfParallelismThanBatches() throws Exception {
 
-    FastByIDMap<PreferenceArray> userData = new FastByIDMap<PreferenceArray>();
+    FastByIDMap<PreferenceArray> userData = new FastByIDMap<>();
     userData.put(1, new GenericUserPreferenceArray(Arrays.asList(new GenericPreference(1, 1, 1),
         new GenericPreference(1, 2, 1), new GenericPreference(1, 3, 1))));
     userData.put(2, new GenericUserPreferenceArray(Arrays.asList(new GenericPreference(2, 1, 1),
@@ -71,10 +71,27 @@ public class MultithreadedBatchItemSimilaritiesTest {
 
     BatchItemSimilarities batchSimilarities = new MultithreadedBatchItemSimilarities(recommender, 10);
 
-    try {
-      // Batch size is 100, so we only get 1 batch from 3 items, but we use a degreeOfParallelism of 2
-      batchSimilarities.computeItemSimilarities(2, 1, mock(SimilarItemsWriter.class));
-      fail();
-    } catch (IOException e) {}
+    // Batch size is 100, so we only get 1 batch from 3 items, but we use a degreeOfParallelism of 2
+    batchSimilarities.computeItemSimilarities(2, 1, mock(SimilarItemsWriter.class));
+    fail();
   }
+
+  @Test
+  public void testCorrectNumberOfOutputSimilarities() throws Exception {
+    FastByIDMap<PreferenceArray> userData = new FastByIDMap<>();
+    userData.put(1, new GenericUserPreferenceArray(Arrays.asList(new GenericPreference(1, 1, 1),
+        new GenericPreference(1, 2, 1), new GenericPreference(1, 3, 1))));
+    userData.put(2, new GenericUserPreferenceArray(Arrays.asList(new GenericPreference(2, 1, 1),
+        new GenericPreference(2, 2, 1), new GenericPreference(2, 4, 1))));
+
+    DataModel dataModel = new GenericDataModel(userData);
+    ItemBasedRecommender recommender =
+        new GenericItemBasedRecommender(dataModel, new TanimotoCoefficientSimilarity(dataModel));
+
+    BatchItemSimilarities batchSimilarities = new MultithreadedBatchItemSimilarities(recommender, 10, 2);
+
+    int numOutputSimilarities = batchSimilarities.computeItemSimilarities(2, 1, mock(SimilarItemsWriter.class));
+    assertEquals(numOutputSimilarities, 10);
+  }
+
 }
